--- a/scripts/pathogen_Hiura2021.Rmd
+++ b/scripts/pathogen_Hiura2021.Rmd
@@ -259,11 +259,16 @@ path_gs_tbl <- path_gs_out %>%
   gt::tab_footnote(footnote = "The functional groups of the fungal species were inferred from previous studies.", 
                    locations = cells_column_labels(columns = Reference)) %>%
   gt::tab_footnote(footnote = "Species for which we have not been able to find any previous studies on their functional groups are classified as \"unknown\" functional groups.", 
-                   locations = cells_column_labels(columns = `Functional group`))
+                   locations = cells_column_labels(columns = `Functional group`)) %>%
+  opt_footnote_marks(marks = "standard") %>%
+  tab_options(table.font.names = "Times New Roman")
 
 show(path_gs_tbl)
 
-gtsave(path_gs_tbl, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/export/Pathogen_putative.png"))
+gtsave(path_gs_tbl, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/export/Pathogen_putative.png"), 
+       zoom = 2, vwidth = 1890, vheight = 1417)
+gtsave(path_gs_tbl, file = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/export/Pathogen_putative.pdf"), 
+       vwidth = 1890, vheight = 1417)
 ```
 
 #envfit (not included in the paper published on Scientific Reports, 2025)
@@ -415,13 +420,11 @@ ps_ITS_guild2@tax_table[, "FuncType2"]
 
 ```{r}
 #theme settings
-mytheme <-theme(axis.title = element_text(size = 7),
-                axis.text = element_text(size = 6),
-                axis.line = element_line(linewidth = 0.2), 
+mytheme <-theme(text = element_text(color = "black"), 
+                axis.text = element_text(color = "black"),
+                axis.title.y = element_text(size = 8), 
                 
-                legend.title = element_text(size = 7), 
-                legend.text = element_text(size = 7), 
-                legend.key.size = unit(8, "pt"), 
+                legend.key.size = unit(9, "pt"), 
                 legend.spacing.x = unit(0, "mm"))
 ```
 
@@ -447,17 +450,17 @@ abund_plot <- abund_ga %>% arrange(order)
 p_path <- ggplot(data = abund_plot, 
                  mapping = aes(x = PC1_clim, y = abundance, color = FuncType)) + 
   scale_color_manual(values = guild$col[sapply(levels(abund_ga$FuncType), grep, guild$FuncType)]) + 
-  geom_line(data = new_data, aes(y = fit), linewidth = 0.35, color = "black") +
+  geom_line(data = new_data, aes(y = fit), linewidth = 0.7, color = "black") +
   geom_ribbon(data = new_data, 
               aes(ymin = lower, ymax = upper, y = fit),
-              alpha = 0.05, linewidth = 0.35, color = "black", fill = "black") +
+              alpha = 0.05, linewidth = 0, color = NA, fill = "black") +
   geom_point() + 
   theme_classic() + mytheme +
-  xlab("Climatic PC1") + ylab("Abundance of the putative pathogenic fungi after rarefaction") + labs(color = "Guild", shape = "Site") + NULL
+  xlab("Climatic PC1") + ylab("Abundance of the putative pathogenic fungi after rarefaction") + labs(color = "Functional group") + NULL
   
 show(p_path)
 
-ggsave(filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/figures/pathogen_climate.png"), 
+ggsave(filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/figures/pathogen_climate1.pdf"), 
        plot = p_path, 
        dpi = 300, width = 160, height = 90, units = "mm")
 #white, fruit rot fungi seemed to be abundant on saplings from warm region
