--- a/scripts/pathogen_Hiura2021.Rmd
+++ b/scripts/pathogen_Hiura2021.Rmd
@@ -573,7 +573,7 @@ summary <- list(brown = summary(model_brown),
 #total pathogen abundance
 
 ```{r}
-path_total <- apply(ps_ITS_guild@otu_table, 1, sum)
+path_total <- sample_sums(ps_ITS_path)
 
 plot(metadata$PC1_clim, path_total, col = metadata$site)
 
@@ -582,6 +582,41 @@ model_total <- glm.nb(path_total~site + PC1_clim + PC2_clim,
 summ_tot <- summary(model_total)
 
 #abundance of pathogens were associated with climate(negatively with warmth) at distributions of host cedar populations
+```
+
+```{r}
+pldata_total <- left_join(rownames_to_column(data.frame(Abundance = path_total), var = "ID"), 
+                          rownames_to_column(metadata, var = "ID"), 
+                          by = "ID")
+
+#show prediction and CI for the model with the total abundance tested on PC1_clim
+model_p <- glm.nb(path_total~PC1_clim, data = metadata, link = log)
+new_data <- data.frame(PC1_clim = seq(min(abund_ga$PC1_clim), 
+                                      max(abund_ga$PC1_clim), 
+                                      length.out = 100))
+pred <- predict(model_p, newdata = new_data, type = "link", se.fit = TRUE)
+crit <- qnorm(0.975)  # For 95% confidence intervals
+
+new_data$fit <- exp(pred$fit)
+new_data$lower <- exp(pred$fit - crit * pred$se.fit)
+new_data$upper <- exp(pred$fit + crit * pred$se.fit)
+
+p_path <- ggplot(data = pldata_total, 
+                 mapping = aes(x = PC1_clim, y = Abundance)) + 
+  geom_line(data = new_data, aes(y = fit), linewidth = 0.7, color = "black") +
+  geom_ribbon(data = new_data, 
+              aes(ymin = lower, ymax = upper, y = fit),
+              alpha = 0.05, linewidth = 0, color = NA, fill = "black") +
+  geom_point() + 
+  theme_classic() + mytheme +
+  xlab("Climatic PC1") + ylab("Total abundance of cedar-disease-related fungal genera \nafter rarefaction.") + 
+  NULL
+  
+show(p_path)
+
+ggsave(filename = paste0(path_out, "/231202_Sugi_phyllosphere_June_ITS/figures/pathall_climate1.png"), 
+       plot = p_path, 
+       dpi = 300, width = 160, height = 90, units = "mm")
 ```
 
 #adjusted p value
